common-applications/test-environment/opendesign-datapertus-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: opendesign-datapertus-test
  name: opendesign-datapertus-test
