common-applications/test-environment/opendesign-datapertus-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opendesign-datapertus-test-deployment
  namespace: opendesign-datapertus-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: opendesign-datapertus-test
  template:
    metadata:
      labels:
        app: opendesign-datapertus-test
    spec:
      containers:
      - name: opendesign-datapertus-test
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/dataset-test:63a05ea93d9a4a28a0d9bbecd5c51f40ba470ded
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: datastat-nginx-volume
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      volumes:
      - configMap:
          defaultMode: 420
          name: datastat-configmap
        name: datastat-nginx-volume
