common-applications/test-environment/opendesign-datapertus-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendesign-datapertus-test-service
  namespace: opendesign-datapertus-test
spec:
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: opendesign-datapertus-test
  type: ClusterIP
